# ripple_net

./: .gitignore  LICENSE  README.md  dataset_build.py  pyproject.toml  requirements.txt  ripple.ipynb  ripple.py  ripple_app.py  ripple_art.py  ripple_cli.py  ripple_image.py  setup.py
.github/workflows/: publish.yml
ripple/: __init__.py  image_embedder.py  image_ripple.py  image_search.py  image_tagger.py  ripple.py  text_search.py  utils.py
